--- a/sentinel-demo/sentinel-demo-apache-dubbo/pom.xml
+++ b/sentinel-demo/sentinel-demo-apache-dubbo/pom.xml
@@ -45,5 +45,25 @@
             <artifactId>sentinel-transport-simple-http</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+        <!-- java.lang.NoClassDefFoundError: org/slf4j/LoggerFactory  https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.22</version>
+        </dependency>
+
+        <!--curator的jar包 java.lang.NoClassDefFoundError: org/apache/curator/RetryPolicy -->
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-framework</artifactId>
+            <version>2.8.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-recipes</artifactId>
+            <version>2.8.0</version>
+        </dependency>
     </dependencies>
+
 </project>
